New Labs Folder and Lab 1

--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -5,15 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    
-    <h1>Karen Bonilla</h1>
-    <p>N320 Examples</p> 
-    <p>Fall 2020</p>
-
-    <h2>Lab 1</h2>
-    <p><a href = "labs/lab1/index.html">First Example</a></p>
-
+    TODO: Insert lab one here
 </body>
 </html>
