--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>N320 Examples</p> 
     <p>Fall 2020</p>
 
-    <h2>Lab 1</h2>
+    <h2 a = "/labs/lab1/index.html">Lab 1</h2>
     <p><a href = "labs/lab1/index.html">First Example</a></p>
 
 </body>
