--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ground Rain Lab</title>
 </head>
 <body>
-    TODO: Insert lab one here
+
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+    <script src = "js/rain.js"></script>
 </body>
 </html>
