--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <p>N320 Examples</p> 
     <p>Fall 2020</p>
 
-    <h2 a = "/labs/lab1/index.html">Lab 1</h2>
-    <h2 a = "/labs/lab2/index.html">Lab 1</h2>
-    <p><a href = "labs/lab1/index.html">First Example</a></p>
+    <p><a href = "labs/lab1/index.html">Lab 1</a></p>
+
+    <p><a href = "labs/lab2/index.html">Lab 1</a></p>
 
 </body>
 </html>
