--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
     <p><a href = "labs/lab2/index.html">Lab 2</a></p>
 
-    <p><a href = "labs/lab3/index.html">Lab 3></a></p>
+    <p><a href = "labs/lab3/index.html">Lab 3</a></p>
 </body>
 </html>
