Board Game Deconstruction

--- a/labs/lab4/index.html
+++ b/labs/lab4/index.html
@@ -530,11 +530,11 @@
        rx="7.9241066"
        cy="13.799212"
        cx="-147.79344"
-       id="path1819-9-3"
+       id="rpiece3"
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3"
+       id="rpiece4"
        cx="-195.93602"
        cy="30.818182"
        rx="7.9241066"
@@ -546,11 +546,11 @@
        rx="7.9241066"
        cy="-52.122646"
        cx="-37.046204"
-       id="path1819-9-3-3-7"
+       id="rpiece5"
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2"
+       id="rpiece6"
        cx="-84.837334"
        cy="-34.100079"
        rx="7.9241066"
@@ -562,11 +562,11 @@
        rx="7.9241066"
        cy="-17.634396"
        cx="-131.46518"
-       id="path1819-9-3-3-7-2-2"
+       id="rpiece7"
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2-2-3"
+       id="rpiece8"
        cx="-178.57565"
        cy="0.7055487"
        rx="7.9241066"
@@ -578,11 +578,11 @@
        rx="7.9241066"
        cy="-13.022855"
        cx="-210.71915"
-       id="path1819-9-3-3-7-2-2-3-1"
+       id="rpiece9"
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2-2-3-1-0"
+       id="rpiece10"
        cx="-163.60866"
        cy="-31.362799"
        rx="7.9241066"
@@ -600,11 +600,11 @@
        rx="7.9241066"
        cy="-48.514713"
        cx="-116.65164"
-       id="path1819-9-3-3-7-2-2-3-1-0-2"
+       id="rpiece11"
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#ff0000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1"
+       id="rpiece12"
        cx="-68.684776"
        cy="-66.035484"
        rx="7.9241066"
@@ -616,11 +616,11 @@
        rx="7.9241066"
        cy="-175.4279"
        cx="-106.99272"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8"
+       id="bpiece1"
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6"
+       id="bpiece2"
        cx="-20.750572"
        cy="222.08849"
        rx="7.9241066"
@@ -632,11 +632,11 @@
        rx="7.9241066"
        cy="239.10745"
        cx="-68.893143"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4"
+       id="bpiece3"
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4-4"
+       id="bpiece4"
        cx="-116.02589"
        cy="255.75757"
        rx="7.9241066"
@@ -648,11 +648,11 @@
        rx="7.9241066"
        cy="226.83298"
        cx="-98.818977"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4-4-6"
+       id="bpiece5"
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4-4-6-7"
+       id="bpiece6"
        cx="-52.871796"
        cy="210.04991"
        rx="7.9241066"
@@ -664,11 +664,11 @@
        rx="7.9241066"
        cy="192.52913"
        cx="-4.9049473"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4-4-6-7-2"
+       id="bpiece7"
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4-4-6-7-2-8"
+       id="bpiece8"
        cx="42.052078"
        cy="175.37723"
        rx="7.9241066"
@@ -680,11 +680,11 @@
        rx="7.9241066"
        cy="161.46439"
        cx="10.413507"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4-4-6-7-2-8-4"
+       id="bpiece9"
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4-4-6-7-2-8-4-1"
+       id="bpiece10"
        cx="-37.048431"
        cy="178.80074"
        rx="7.9241066"
@@ -696,11 +696,11 @@
        rx="7.9241066"
        cy="195.95265"
        cx="-84.005455"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4-4-6-7-2-8-4-1-2"
+       id="bpiece11"
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
     <ellipse
        style="fill:#000000;fill-opacity:1;stroke:#ffffff;stroke-width:0.770059;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="path1819-9-3-3-7-2-2-3-1-0-2-1-8-6-4-4-6-7-2-8-4-1-2-7"
+       id="bpiece12"
        cx="-131.46739"
        cy="213.289"
        rx="7.9241066"
