--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <p><a href = "labs/lab3/index.html">Lab 3</a></p>
 
     <p><a href = "labs/lab4/index.html">Lab 4</a></p>
-<<<<<<< Updated upstream
-=======
 
->>>>>>> Stashed changes
+    <p><a href = "labs/lab5/index.html">Lab 5</a></p>
+
 </body>
 </html>
