--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 
     <p><a href = "labs/lab5/index.html">Lab 5</a></p>
 
+    <p><a href = "labs/lab6/index.html">Lab 6</a></p>
+
 </body>
 </html>
