--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
 
     <p><a href = "labs/lab6/index.html">Lab 6</a></p>
 
+    <p><a href = "labs/Project 1/index.html">Project 1</a></p>
+
 </body>
 </html>
