--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <p><a href = "labs/lab6/index.html">Lab 6</a></p>
 
     <p><a href = "labs/Project 1/index.html">Project 1</a></p>
-
+    
+    <p><a href = "labs/Kickball/index.html">Kickball</a></p>
+    
 </body>
 </html>
