--- a/labs/Project2/index.html
+++ b/labs/Project2/index.html
@@ -8,9 +8,15 @@
 <body>
     <canvas id = "renderCanvas" width = "1500" height = "700"></canvas>
 
+    <div id = "characterTable"></div>
+
+    <div id = "titanTable"></div>
+
    <!-- <script type = "module" src = "https://cdnjs.cloudflare.com/ajax/libs/babylonjs/4.2.0/babylon.js"></script> -->
     <script src="https://cdn.babylonjs.com/babylon.js"></script> 
     <script src = "https://preview.babylonjs.com/materialsLibrary/babylonjs.materials.js"></script>
+    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
     <script src = "js/aotStore.js"></script> 
     <script src = "js/world.js"></script>
 </body>
